* lfs_core/Makefile: factorized with Makefile.common

--- a/lfs_core/Makefile
+++ b/lfs_core/Makefile
@@ -2,67 +2,15 @@
 # Variables
 ##############################################################################
 TARGET=lfs_core
+LIBNAME=lfs_core
 
 SRC=lfs.ml
 
-LIBS=../commons/commons.cma 
-INCLUDES=-I ../commons -I ../commons/ocollection
+DEP_LIBS=commons commons_ocollection commons_core
 
-##############################################################################
-# Generic variables
-##############################################################################
-OCAMLC=ocamlc$(OPTBIN) -g -dtypes   $(INCLUDES) 
-OCAMLOPT=ocamlopt$(OPTBIN)   $(INCLUDES) $(OPTFLAGS)
-#OCAMLLEX=ocamllex$(OPTBIN) -ml
-OCAMLLEX=ocamllex$(OPTBIN)
-OCAMLYACC=ocamlyacc -v
-OCAMLDEP=ocamldep$(OPTBIN)  $(INCLUDES)
-OCAMLMKTOP=ocamlmktop -g -custom $(INCLUDES)
+INCLUDES=${DEP_LIBS:%=-I ../external/%}
+#LIBS=${DEP_LIBS:%=../external/%/lib.cma}
 
-OBJS= $(SRC:.ml=.cmo)
-OPTOBJS= $(SRC:.ml=.cmx)
+EXPORTSRC=lfs.mli
 
-
-##############################################################################
-# Top rules
-##############################################################################
-all: $(TARGET).cma
-all.opt: $(TARGET).cmxa
-opt: all.opt
-
-
-$(TARGET).cma: $(OBJS) $(LIBS)
-	$(OCAMLC) -a -o $(TARGET).cma $(OBJS)
-
-$(TARGET).cmxa: $(OPTOBJS) $(LIBS:.cma=.cmxa)
-	$(OCAMLOPT) -a -o $(TARGET).cmxa $(OPTOBJS)
-
-
-
-##############################################################################
-# Generic rules
-##############################################################################
-.SUFFIXES: .ml .mli .cmo .cmi .cmx
-
-.ml.cmo:
-	$(OCAMLC) -c $<
-.mli.cmi:
-	$(OCAMLC) -c $<
-.ml.cmx:
-	$(OCAMLOPT) -c $<
-
-.ml.mldepend: 
-	$(OCAMLC) -i $<
-
-clean::
-	rm -f *.cm[ioxa] *.o *.a *.cmxa *.annot
-
-clean::
-	rm -f *~ .*~ gmon.out #*#
-
-beforedepend::
-
-depend:: beforedepend
-	$(OCAMLDEP) *.mli *.ml    > .depend
-
--include .depend
+include ../Makefile.common
